--- a/Demo/入门实例2-旋转动画.html
+++ b/Demo/入门实例2-旋转动画.html
@@ -230,7 +230,7 @@
                     colorAttachments: [{
                         view: textureView,
                         loadOp: 'clear',
-                        clearValue: { r: 0, g: 0, b: 0, a: 1 },
+                        clearValue: { r: 0.5, g: 0.5, b: 0.8, a: 0.6 }, // 背景色
                         storeOp: 'store',
                     }],
                 };
